--- a/react/src/App.css
+++ b/react/src/App.css
@@ -4,10 +4,10 @@ body {
     font-family: 'Gotham', sans-serif;
     font-size: 200%;
     color: #ffffff;
-    background-color: #ff3e2d
+    background-color: #323643
 }
 
-/*
+/* GOTHAM FONT OPTIONS
 font-family: 'Gotham', sans-serif;
 font-family: 'Gotham Black', sans-serif;
 font-family: 'Gotham Light', sans-serif;
