styled navigation bar

--- a/react/src/css/App.css
+++ b/react/src/css/App.css
@@ -4,7 +4,7 @@ body {
     font-family: 'Gotham', sans-serif;
     font-size: 200%;
     color: #ffffff;
-    background-color: #323643
+    background-color: #323643;
 }
 
 /* GOTHAM FONT OPTIONS
