--- a/react/src/css/NavigationBar.css
+++ b/react/src/css/NavigationBar.css
@@ -10,6 +10,7 @@ body {
 
 .mark {
     float: left;
+    font-family: 'Gotham XLight', sans-serif;
     font-size: 50%;
     padding: 0 20px;
     position: absolute;
@@ -31,8 +32,7 @@ li {
     margin: 0;
     padding: 15px 0;
 }
-
-a {
+.navlink {
     color: #ffffff;
     font-style: none;
     padding: 15px 40px;
@@ -40,7 +40,7 @@ a {
     transition-duration: 250ms;
 }
 
-a:hover {
+.navlink:hover {
     background-color: #212532;
     padding: 15px 70px;
     transition-duration: 500ms;
