--- a/react/src/css/Portfolio.css
+++ b/react/src/css/Portfolio.css
@@ -1,9 +1,10 @@
 @import url('http://fonts.cdnfonts.com/css/gotham');
 
 body {
-    font-family: 'Gotham XLight', sans-serif;
     width: 100vw;
     height: 100vh;
+
+    font-family: 'Gotham XLight', sans-serif;
     overflow: hidden;
 }
 
@@ -11,24 +12,41 @@ body {
     width: 100%;
     height: 100%;
 
-    scroll-snap-type: x mandatory;
-    overflow-x: scroll;
     display: flex;
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory;
 }
 
 section {
-    flex: none;
-    scroll-snap-align: start;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
     width: 100vw;
     height: 100vh;
+
+    align-items: center;
+    flex: none;
+    justify-content: center;
+    scroll-snap-align: start;
+    
 }
 
-.image {
-    box-shadow: 5px 5px #212432;
+section p {
+    position: relative;
+    text-align: center;
+    top: 10vh;
+}
+
+section .subtext {
+    position: relative;
+    font-size: 60%;
+    text-align: center;
+    top: 9vh;
+}
+
+section .image {
     width: 50%;
     height: 50%;
+
+    box-shadow: 5px 5px #212432;
+    left: 25vw;
+    position: relative;
+    top: 10vh;
 }
