--- a/react/src/scss/App.scss
+++ b/react/src/scss/App.scss
@@ -3,6 +3,7 @@
 body {
     font-family: 'Gotham Light', sans-serif;
     margin: 0;
+    overflow-x: hidden;
     padding: 0;
     background-color: #fbf2ef;
 }
