--- a/react/src/scss/App.scss
+++ b/react/src/scss/App.scss
@@ -345,10 +345,12 @@ body {
 }
 
 .square {
-    border-radius: 2px;
+    border-radius: 100px;
+
     transform: scale(0);
 
     .text {
+		opacity: 0;
         color: 'transparent';
     }
 }
@@ -359,29 +361,32 @@ body {
 
 @keyframes wipe-enter {
 	0% {
-		transform: scale(0, 0.025);
+		transform: scale(0, 0);
+        border-radius: 100px;
 	}
     25% {
-		transform: scale(1, 0.025);
+		transform: scale(0.025, 1);
+        border-radius: 100px;
     }
     80% {
-		transform: scale(1, 1.1);
+		transform: scale(1.1, 1);
+        border-radius: 100px;
     }
 	100% {
 		transform: scale(1, 1);
+        border-radius: 100px;
 	}
 }
 
-
 .text-animation {
-    animation: fade-in 1.5s ease forwards;
+    animation: fade-in ease forwards;
 }
 
 @keyframes fade-in {
 	0% {
 		opacity: 0;
 	}
-    90% {
+    80% {
 		opacity: 0;
 	}
 	100% {
